# ros2-journey

./: .gitignore  README.md
.github/: copilot-instructions.md
irrigation_msgs/: CMakeLists.txt  package.xml
irrigation_msgs/action/: IrrigationCycle.action
irrigation_msgs/msg/: SoilData.msg
irrigation_msgs/srv/: IrrigationControl.srv
irrigation_robot/: CMakeLists.txt  package.xml
irrigation_robot/launch/: irrigation.launch.py
irrigation_robot/src/: lesson10_action_client.cpp  lesson10_action_server.cpp  lesson11_executor.cpp  lesson1_minimal_node.cpp  lesson2_publisher.cpp  lesson3_subscriber.cpp  lesson4_server_server.cpp  lesson4_server_service.cpp  lesson5_param_node.cpp  lesson7_custom_msg_pub.cpp  lesson8_custom_msg_sub.cpp  lesson9_service_client.cpp  lesson9_service_server.cpp
phase1_fundamentals/: README.md
phase1_fundamentals/lesson1_nodes/: README.md
phase1_fundamentals/lesson2_publisher/: README.md
phase1_fundamentals/lesson3_subscriber/: README.md
phase1_fundamentals/lesson4_services/: README.md
phase1_fundamentals/lesson5_parameters/: README.md
phase1_fundamentals/lesson6_launch_files/: README.md
phase2_packages/: README.md
phase2_packages/lesson10_action/: README.md
phase2_packages/lesson11_executor/: README.md
phase2_packages/lesson7_custom_message/: README.md
phase2_packages/lesson8_custom_msg/: README.md
phase2_packages/lesson9_custom_service/: README.md
phase3_modeling/: README.md
phase4_perception/: README.md
phase5_nav2/: README.md
phase6_microros/: README.md
phase7_moveit2/: README.md
phase8_autoware/: README.md
phase9_research/: README.md
